[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/sprites/UI/starfull2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/UI/endlevel.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/UI/staroutline2.png" type="Texture" id=3]
[ext_resource path="res://Themes/titleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Fonts/Gamer.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Themes/ui16real.tres" type="Theme" id=6]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=7]
[ext_resource path="res://UI/EndGameScreen.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/UI/button.png" type="Texture" id=9]

[sub_resource type="Theme" id=4]
default_font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 5 )

[node name="EndGameScreen" type="Node2D"]
pause_mode = 2
position = Vector2( 348, 68 )
scale = Vector2( 1.5, 1.5 )
z_index = 30
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -239.0
margin_top = -49.0
margin_right = 207.0
margin_bottom = 281.0
color = Color( 0, 0, 0, 0.486275 )

[node name="parchemin" type="Sprite" parent="."]
position = Vector2( -17, 106 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Bronze" type="Node2D" parent="."]
position = Vector2( 48, 92 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Bronze"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Bronze"]
visible = false
texture = ExtResource( 1 )

[node name="Silver" type="Node2D" parent="."]
position = Vector2( 71, 92 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Silver"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Silver"]
visible = false
texture = ExtResource( 1 )

[node name="Gold" type="Node2D" parent="."]
position = Vector2( 93, 92 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Gold"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Gold"]
visible = false
texture = ExtResource( 1 )

[node name="Bullets shot" type="RichTextLabel" parent="."]
margin_left = -140.0
margin_top = 79.0
margin_right = -54.0
margin_bottom = 95.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.929412, 0.870588, 0.811765, 1 )
bbcode_enabled = true
bbcode_text = "bullets shot:"
text = "bullets shot:"

[node name="sharp_results" type="RichTextLabel" parent="."]
margin_left = -63.0
margin_top = 79.0
margin_right = 28.0
margin_bottom = 95.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.929412, 0.870588, 0.811765, 1 )
bbcode_enabled = true

[node name="sharp_nextOrBest" type="RichTextLabel" parent="."]
margin_left = -141.0
margin_top = 92.0
margin_right = -6.0
margin_bottom = 109.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.32549, 0.294118, 0.219608, 1 )

[node name="Bronze2" type="Node2D" parent="."]
position = Vector2( 49, 132 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Bronze2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Bronze2"]
visible = false
texture = ExtResource( 1 )

[node name="Silver2" type="Node2D" parent="."]
position = Vector2( 71, 132 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Silver2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Silver2"]
visible = false
texture = ExtResource( 1 )

[node name="Gold2" type="Node2D" parent="."]
position = Vector2( 93, 132 )
scale = Vector2( 2, 2 )

[node name="Outline" type="Sprite" parent="Gold2"]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Gold2"]
visible = false
texture = ExtResource( 1 )

[node name="Speed" type="RichTextLabel" parent="."]
margin_left = -141.0
margin_top = 118.0
margin_right = -96.0
margin_bottom = 134.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.929412, 0.870588, 0.811765, 1 )
bbcode_enabled = true
bbcode_text = "Speed:"
text = "Speed:"

[node name="speed_results" type="RichTextLabel" parent="."]
margin_left = -102.0
margin_top = 118.0
margin_right = 25.0
margin_bottom = 137.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.929412, 0.870588, 0.811765, 1 )
bbcode_enabled = true

[node name="speed_nextOrBest" type="RichTextLabel" parent="."]
margin_left = -141.0
margin_top = 131.0
margin_right = 34.0
margin_bottom = 149.0
theme = ExtResource( 6 )
custom_colors/default_color = Color( 0.32549, 0.294118, 0.219608, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -18, 232.667 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )

[node name="nextButton" type="Button" parent="."]
margin_left = -156.0
margin_top = 147.333
margin_right = -46.0003
margin_bottom = 179.333
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.32549, 0.294118, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Back to levels"

[node name="retryButton" type="Button" parent="."]
margin_left = -6.00002
margin_top = 144.0
margin_right = 160.0
margin_bottom = 190.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.32549, 0.294118, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Retry"

[node name="backToLevel" type="Button" parent="."]
margin_left = -100.667
margin_top = 203.333
margin_right = 65.333
margin_bottom = 249.333
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.87451, 0.788235, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Next Level"

[connection signal="pressed" from="nextButton" to="." method="_on_nextButton_pressed"]
[connection signal="pressed" from="retryButton" to="." method="_on_retryButton_pressed"]
[connection signal="pressed" from="backToLevel" to="." method="_on_backToLevel_pressed"]
